--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(180deg, #C8A2C8 0%, rgba(216, 191, 216, 0.8) 80%, rgba(200, 162, 200, 0.2) 100%);
+    /* background: linear-gradient(90deg, #C8A2C8 0%, #C9C9EE 100%);  */
     height: 80px;
     display: flex;
     justify-content: center;
@@ -8,6 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    /* box-shadow: 0px .5px 5px #ffff; */
   }
   
   .navbar-container {
@@ -94,7 +96,7 @@
     }
   
     .nav-menu.active {
-      background: #242222;
+      background: #C9C9EE;
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
