--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,5 @@
 .navbar {
-    background: linear-gradient(180deg, #C8A2C8 0%, rgba(216, 191, 216, 0.8) 80%, rgba(200, 162, 200, 0.2) 100%);
-    /* background: linear-gradient(90deg, #C8A2C8 0%, #C9C9EE 100%);  */
+    background: linear-gradient(180deg, #C8A2C8 0%, #D8BFD8 55%, #F0E6F6 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -9,16 +8,21 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    /* box-shadow: 0px .5px 5px #ffff; */
-  }
+    padding: 0; /* Ensure no padding causing the issue */
+    margin: 0; /* Ensure no margin causing the issue */
+    border: none; /* Ensure there's no border */
+    overflow: hidden; /* Prevents overflow */
+}
   
-  .navbar-container {
+.navbar-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 80px;
     max-width: 1500px;
-  }
+    margin: 0; /* Ensure no margin causing the issue */
+}
+
   
   .navbar-logo {
     color: #fff;
