--- a/src/components/pages/ProductCards.css
+++ b/src/components/pages/ProductCards.css
@@ -5,7 +5,6 @@
   
   h1 {
     text-align: center;
-    font-size: 36px;
   }
   
   .cards--container {
@@ -80,10 +79,9 @@
     font-size: 12px; /* Make it more readable */
     font-weight: 700;
     color: #fff;
-    background: #B69C85; /* Add transparency */
+    background: #D8BFD8; /* Add transparency */
     border-radius: 5px; /* Rounded corners */
     box-sizing: border-box;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
   
   .cards--item--img {
