--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
-  transform: translateY(-80px); /* Moves the whole container up */
+  transform: translateY(-80px); 
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
