--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,21 +1,17 @@
 .navbar {
-    /* background: rgba(255, 255, 255, 0.1); */
     background: rgba(0, 0, 0, 0.05); 
-    backdrop-filter: blur(8px); /* Softens background */
-    /* background: linear-gradient(180deg, #C8A2C8 0%, #D8BFD8 55%, #F0E6F6 100%);  */
+    backdrop-filter: blur(8px); 
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    /* position: sticky;  */
     position: fixed;
     top: 0;
     z-index: 999;
     padding: 0; 
     margin: 0; 
     border: none; 
-    overflow: hidden; 
     width: 100%;
     transition: transform 0.4s ease-in-out;
 }
@@ -23,6 +19,10 @@
 .navbar.hidden {
     transform: translateY(-100%);
   }
+
+.navbar.visible {
+    transform: translateY(0); /* Bring the navbar back into view */
+}
   
 .navbar-container {
     display: flex;
@@ -30,7 +30,7 @@
     align-items: center;
     height: 80px;
     max-width: 1500px;
-    margin: 0; /* Ensure no margin causing the issue */
+    margin: 0; 
 }
 
   
@@ -94,92 +94,7 @@
     display: none;
   }
   
-  @media screen and (max-width: 960px) {
-    .NavbarItems {
-      position: relative;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 90vh;
-      position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-    }
-  
-    .nav-menu.active {
-      background: #C9C9EE;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-    }
-  
-    .nav-links {
-      text-align: center;
-      padding: 2rem;
-      width: 100%;
-      display: table;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    }
-  
-    .nav-links:hover {
-      background-color: #fff;
-      color: #242424;
-      border-radius: 0;
-    }
-  
-    .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(25%, 50%);
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    }
-  
-    .menu-icon {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-100%, 60%);
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-  
-    .fa-times {
-      color: #fff;
-      font-size: 2rem;
-    }
-  
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      text-decoration: none;
-      font-size: 1.5rem;
-      background-color: transparent;
-      color: #fff;
-      padding: 14px 20px;
-      border: 1px solid #fff;
-      transition: all 0.3s ease-out;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
-      transition: 250ms;
-    }
-  }
-
-
-.btn--outline {
+   .btn--outline {
     background-color: transparent;
     color: #fff;
     padding: 8px 20px;
@@ -191,4 +106,90 @@
 
 .btn--outline:hover {
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);  /* Stronger shadow on hover */
+}
+
+
+@media screen and (max-width: 960px) {
+  .NavbarItems {
+    position: relative;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 80px;
+    left: -100%;
+    width: 100%;
+    height: 90vh;
+    background: black;
+    opacity: 1;
+    z-index: 99999;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .nav-menu.active {
+    left: 0 !important;
+    opacity: 1 !important;
+  }
+
+  .nav-links {
+    position: relative; /* Add this for stacking context */
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  .nav-links:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+    z-index: 10000;
+  }
+
+  .fa-times {
+    color: #fff;
+    font-size: 2rem;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: black;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
+  }
 }
